prevent section 1 image from moving on smaller width devices

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ section {
 
 #home {
   height: 90vh;
+  touch-action: none;
 }
 
 #blur {
